Change from png to svg files for gh, npm icons

--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -48,7 +48,7 @@
 
     // GitHub
     const githubImage = document.createElement('img');
-    githubImage.src = './github.png';
+    githubImage.src = './github.svg';
     githubImage.alt = 'GitHub';
     githubImage.style = imageStyle;
 
@@ -68,7 +68,7 @@
 
     // npm
     const npmImage = document.createElement('img');
-    npmImage.src = './npm.png';
+    npmImage.src = './npm.svg';
     npmImage.alt = 'npm';
     npmImage.style = imageStyle;
 
