--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -144,6 +144,14 @@
       }
     }
 
+    const sidebarSubheading = document.getElementsByClassName("sidebar-subheading");
+    if (sidebarSubheading) {
+      for (let i = 0; i < sidebarSubheading.length; i++) {
+        const subheading = sidebarSubheading[i];
+        subheading.removeAttribute("aria-expanded");
+      }
+    }
+
     setListItemsAc11y();
   }
 </script>
